2006-01-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/music.cc (derived_mark): derive Music from Prob.

	* lily/paper-system.cc (LY_DEFINE): derive from Prob.

	* lily/prob.cc (Module): Implement Prob (Property Object), object
	with shared and r/w property alists.  

	* lily/include/prob.hh (Module): new file. Declare Prob.

	* flower/string.cc: remove is_empty().

	* flower/include/string.hh (class String): remove String:: qualifier.

	* buildscripts/analyse-cxx-log.py: new file. Read compile log to
	substitute appropriate functions.

	* flower/include/string.hh (class String): remove to_str0 and
	is_empty(). S&R everywhere.

2006-01-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: add hairpin
	after-linebreak tweak to commonprop.

	* Documentation/user/putting.itely: added two new sections.

2006-01-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/international.cc: 
	* flower/include/international.hh: 

	* flower/getopt-long.cc: 
	* flower/include/getopt-long.hh: Use std::string [interface].
	Update callers.

	* flower/include/std-string.hh: Oops, bugfix for --disable-std-string.

	* stepmake/stepmake/executable-rules.make: Add dependency on
	module libraries.

2006-01-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc: 
	* flower/include/file-path.hh: Use std::string [interface].
	Update callers.

	* flower/direction.cc: 
	* flower/axis.cc: Unused.  Remove.

	* configure.in (--enable-std-string): New option.

	* flower/std-string.cc: 
	* flower/include/std-string.hh: New file.

	* flower/file-name.cc[STD_STRING]:
	* flower/include/file-name.hh[STD_STRING]: Use it.  Update callers.

2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-svg.scm (placebox): no GNU coding standards in SVG output. 

	* scm/define-markup-commands.scm (with-dimensions):
	with-dimensions markup command.

	* input/test/font-table.ly: use it.

	* lily/open-type-font.cc (glyph_list): new function.
