@@ -1,5 +1,11 @@
 2006-01-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/prob-scheme.cc (LY_DEFINE): new file.
+	(LY_DEFINE): functions ly:make-prob , ly:prob-type? , ly:prob-(set-)property(!)
+
+	* lily/music-scheme.cc (LY_DEFINE): rewrite get/set property using
+	prob functions.
+
 	* lily/music.cc (derived_mark): derive Music from Prob.
 
 	* lily/paper-system.cc (LY_DEFINE): derive from Prob.
